--- a/src/app/page.css
+++ b/src/app/page.css
@@ -1,3 +1,7 @@
+body {
+    overflow-x: hidden;
+}
+
 h1 {
     margin: 0;
     font-size: 5rem;
@@ -23,62 +27,70 @@ main section {
 }
 
 .wallpaper-container {
-    overflow: hidden;
+    min-height: 100vh;
 }
+
 .wallpaper {
+    position: absolute;
     width: 100%;
     height: 25cm;
     background-image: url("/public/bg/Strinova\ wallpaper\ main.webp");
-    position: relative;
-    
+    background-size: cover;
 }
+
+.wallpaper-items {
+    margin-top: 75px;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+}
+
 .title {
-    position: absolute;
-    bottom: 7cm;
     text-align: center;
     font-size: 200px;
-    text-shadow: 3px 3px  #80a4d4, 3px -3px 0 #80a4d4, -3px 3px 0 #80a4d4,
-    -3px -4px 0 #80a4d4;
+    text-shadow: 3px 3px #80a4d4, 3px -3px 0 #80a4d4, -3px 3px 0 #80a4d4,
+        -3px -4px 0 #80a4d4;
     color: white;
     font-family: Bahnschrift Condensed;
-    left: 16cm;
 }
-.Subtitle{
-    position: absolute;
-    bottom: 6.8cm;
+
+.subtitle {
     text-align: center;
     font-size: 40px;
-    text-shadow: 3px 3px  #80a4d4, 3px -3px 0 #80a4d4, -3px 3px 0 #80a4d4,
-    -3px -4px 0 #80a4d4;
+    text-shadow: 3px 3px #80a4d4, 3px -3px 0 #80a4d4, -3px 3px 0 #80a4d4,
+        -3px -4px 0 #80a4d4;
     color: white;
     font-family: Bahnschrift Condensed;
-    left: 20.6cm;
 }
-.Download {
+
+.download {
     width: fit-content;
-    position: absolute;
     background-color: #80a4d4;
     color: white;
     padding: 2rem 2rem;
     border-radius: 10px;
     text-decoration: none;
     font-size: 1.2rem;
-    left: 23.5cm;
-    bottom: 100px;
+    transition: all 0.2s ease;
 }
-.Download:hover {
+
+.download:hover {
     color: #80a4d4;
     background-color: white;
-    transition: color 0.6s ease;
 }
+
 .wallpaper2 {
     height: 15cm;
     width: 100%;
     background-image: url("/public/bg/Strinova\ Background\ 2.jpg");
     position: relative;
-    bottom:50px;
+    bottom: 50px;
 }
-.kanami-emoji{
+
+.kanami-emoji {
     position: relative;
     top: -7cm;
     left: 25cm;
@@ -88,30 +100,35 @@ main section {
 .wallpaper2-container {
     overflow: hidden;
 }
+
 .about-title {
     top: -22cm;
     position: absolute;
     text-align: center;
     left: 17.15cm;
     font-size: 3.2rem;
-    color:  #1A1B20;
+    color: #1A1B20;
 }
-.about-text{
+
+.about-text {
     top: -17cm;
     position: absolute;
     text-align: center;
     left: 3cm;
     font-size: 1.2rem;
-    color:  #1A1B20;
+    color: #1A1B20;
 }
+
 /*work on this later */
 .wallpaper3 {
     background-image: url("/public/bg/2023\ Spring\ Festival.png");
     position: relative;
 }
+
 .wallpaper3-container {
     overflow: hidden;
 }
+
 .agents-container {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
@@ -134,6 +151,7 @@ main section {
 .view-more:hover {
     filter: invert(1);
 }
+
 .card {
     background-color: var(--color-base-200);
     border-radius: var(--radius-box);
